--- a/MARE/MARE.csproj
+++ b/MARE/MARE.csproj
@@ -8,9 +8,10 @@
     <OutputType>WinExe</OutputType>
     <RootNamespace>MARE</RootNamespace>
     <AssemblyName>MARE</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -57,13 +58,19 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>GFXDataSet.xsd</DependentUpon>
     </Compile>
+    <Compile Include="IMessageBox.cs" />
+    <Compile Include="IRegistry.cs" />
+    <Compile Include="IRegistryKey.cs" />
     <Compile Include="MareForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="MareForm.Designer.cs">
       <DependentUpon>MareForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="MAREMessageBox.cs" />
     <Compile Include="MareRegHandler.cs" />
+    <Compile Include="MARERegistry.cs" />
+    <Compile Include="MARERegistryKey.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="MareForm.resx">
