--- a/MARE.Tests/packages.config
+++ b/MARE.Tests/packages.config
@@ -9,5 +9,6 @@
   <package id="xunit.core" version="2.4.1-pre.build.4071" targetFramework="net47" />
   <package id="xunit.extensibility.core" version="2.4.1-pre.build.4071" targetFramework="net47" />
   <package id="xunit.extensibility.execution" version="2.4.1-pre.build.4071" targetFramework="net47" />
+  <package id="xunit.runner.console" version="2.4.1-pre.build.4071" targetFramework="net47" developmentDependency="true" />
   <package id="xunit.runner.visualstudio" version="2.4.1-pre.build.4071" targetFramework="net47" developmentDependency="true" />
 </packages>
