--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,5 @@
 language: csharp
 solution: MARE.sln
+script:
+  - xbuild /p:Configuration=Release MARE.sln
+  - mono ./packages/xunit.runner.*/tools/net47/xunit.console.x86.exe ./MARE.Tests/bin/Release/MARE.Tests.dll
