--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,11 @@ sudo: required
 dist: trusty
 
 before_install:
-sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 3FA7E0328081BFF6A14DA29AA6A19B38D3D831EF
-sudo apt install apt-transport-https
-sudo tee /etc/apt/sources.list.d/mono-official-stable.list
-sudo apt update
-sudo apt install mono-devel
+- sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 3FA7E0328081BFF6A14DA29AA6A19B38D3D831EF
+- sudo apt install apt-transport-https
+- sudo tee /etc/apt/sources.list.d/mono-official-stable.list
+- sudo apt update
+- sudo apt install mono-devel
 
 script:
   - xbuild /p:Configuration=Release MARE.sln
