--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,5 @@
 language: csharp
 solution: MARE.sln
-sudo: enabled
 script:
   - xbuild /p:Configuration=Release MARE.sln
-  - export LD_LIBRARY_PATH=/usr/local/lib
-  - mono --debug --profile=monocov:outfile=monocovCoverage.cov,+[MARE],+[MARE.Tests] ./packages/xunit.runner.*/tools/net47/xunit.console.x86.exe ./MARE.Tests/bin/Release/MARE.Tests.dll  /noshadow
-  - monocov --export-xml=monocovCoverage monocovCoverage.cov
-  - REPO_COMMIT_AUTHOR=$(git show -s --pretty=format:"%cn")
-  - REPO_COMMIT_AUTHOR_EMAIL=$(git show -s --pretty=format:"%ce")
-  - REPO_COMMIT_MESSAGE=$(git show -s --pretty=format:"%s")
-  - echo $TRAVIS_COMMIT
-  - echo $TRAVIS_BRANCH
-  - echo $REPO_COMMIT_AUTHOR
-  - echo $REPO_COMMIT_AUTHOR_EMAIL
-  - echo $REPO_COMMIT_MESSAGE
-  - echo $TRAVIS_JOB_ID
-  - mono ./src/packages/coveralls.net.0.6.0/tools/csmacnz.Coveralls.exe --monocov -i ./monocovCoverage --repoToken $COVERALLS_REPO_TOKEN --commitId $TRAVIS_COMMIT --commitBranch $TRAVIS_BRANCH --commitAuthor "$REPO_COMMIT_AUTHOR" --commitEmail "$REPO_COMMIT_AUTHOR_EMAIL" --commitMessage "$REPO_COMMIT_MESSAGE" --jobId $TRAVIS_JOB_ID  --serviceName "travis-ci"  --useRelativePaths
+  - mono ./packages/xunit.runner.*/tools/net47/xunit.console.x86.exe ./MARE.Tests/bin/Release/MARE.Tests.dll
