--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,11 +1,20 @@
 version: 1.0.{build}
 image: Visual Studio 2017
+
 nuget:
   project_feed: true
+  
 build:
   publish_nuget: true
   publish_nuget_symbols: true
   include_nuget_references: true
   verbosity: minimal
+  
 before_build:
-  - nuget restore
+- nuget restore
+- choco install opencover.portable
+- choco install codecov
+
+test_script:
+- OpenCover.Console.exe -register:user -target:"%xunit20%\xunit.console.x86.exe" -targetargs:".\MARE.Tests\bin\Debug\MARE.Tests.dll -noshadow" -filter:"+[UnitTestTargetProject*]* -[MyUnitTests*]*" -output:".\MARE_coverage.xml"
+- codecov -f "MARE_coverage.xml
